test/negative/DynamicAttribute.hx
class DynamicAttribute {
	static function main():Void {
		var count = 2;
		var value = <heredoc newlines={count}>text</heredoc>;
	}
}
